# Agentic_Chatbot

./: .env.example  debug_deepagents.py  pyproject.toml
src/: main.py  models.py
src/agents/: multimodal.py  web_search.py
test_data/: data.csv  test.txt
